add lokesh's code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-<p>Home page</p>
+<!-- //lokesh -->
+
+<nav class ="navbar ">
+    <div class ="container-fluid">
+      <div class ="navbar-header">
+        <h4>Food Delivery App</h4>
+      </div>
+      <ul class ="nav navbar-nav navbar-right">
+        <li><a routerLink="user/signUp" class="nav-link" routerLinkActive="active"> Sign Up </a><a routerLink="ngo/signUp"  class="nav-link" routerLinkActive="active"> Ngo Sign Up </a></li>
+        <!-- <li></li> -->
+      </ul>
+    </div>
+  </nav>
+  <router-outlet></router-outlet>
+  
+  <footer class="footer bg-success">
+    <div class="container-fluid ">
+     
+    </div>
+  </footer>
