--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* lokesh */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+body{
+    background-image: url(../src/assets/images/image2.jpg);
+}
